<resources>
    <string name="app_name" translatable="false">styletransfer</string>
    <string name="gpu" translatable="false">GPU</string>
    <string name="re_run_model" translatable="false">Re-run model</string>
    <string name="choose_a_style" translatable="false">Choose a Style</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="View_Share_Image">View Share Image</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="title_activity_viewimage">viewimage</string>
    <string name="title_activity_startpage">Startpage</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="Your_View_Share_Image">View Your Share Image</string>
    <string name="share">share</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">start</string>
</resources>
