<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:showDividers="middle"
    android:dividerPadding="10dp"
    tools:context=".homepage" >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:onClick="page1"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_Share_Image"
        android:onClick="page2"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Your_View_Share_Image"
        android:onClick="page3"
        android:textSize="30dp"
        />
</LinearLayout>